# GNode

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  _config.yml  annotated.html  annotated_dup.js  architecture.md  architecture_8md.html  classes.html  classgnode_1_1BaseData-members.html  classgnode_1_1BaseData.html  classgnode_1_1BaseData.js  classgnode_1_1BaseData__inherit__graph.map  classgnode_1_1BaseData__inherit__graph.md5  classgnode_1_1Data-members.html  classgnode_1_1Data.html  classgnode_1_1Data.js  classgnode_1_1Data__coll__graph.md5  classgnode_1_1Data__inherit__graph.map  classgnode_1_1Graph-members.html  classgnode_1_1Graph.html  classgnode_1_1Graph.js  classgnode_1_1Input-members.html  classgnode_1_1Input.html  classgnode_1_1Input.js  classgnode_1_1Input__inherit__graph.map  classgnode_1_1Input__inherit__graph.md5  classgnode_1_1Logger-members.html  classgnode_1_1Logger.html  classgnode_1_1Logger.js  classgnode_1_1Node-members.html  classgnode_1_1Node.html  classgnode_1_1Node.js  classgnode_1_1Node__coll__graph.map  classgnode_1_1Node__coll__graph.md5  classgnode_1_1Output-members.html  classgnode_1_1Output.html  classgnode_1_1Output.js  classgnode_1_1Output__coll__graph.md5  (+93 more)
.github/workflows/: cmake-ubuntu.yml  deploy_docs.yml
GNode/: CMakeLists.txt
GNode/include/: gnode.hpp
GNode/include/gnode/: data.hpp  graph.hpp  link.hpp  logger.hpp  node.hpp  point.hpp  port.hpp
GNode/src/: data.cpp  graph.cpp  link.cpp  logger.cpp  node.cpp  tree.cpp
doc/: CMakeLists.txt  index.md
doc/doxygen/: Doxyfile.in
docs/: Doxyfile
examples/: CMakeLists.txt
examples/calculator/: CMakeLists.txt  main.cpp
include/: gnode.hpp
latex/: annotated.tex  architecture_8md.tex  classgnode_1_1BaseData.tex  classgnode_1_1BaseData__inherit__graph.md5  classgnode_1_1Data.tex  classgnode_1_1Data__inherit__graph.md5  classgnode_1_1Graph.tex  classgnode_1_1Input.tex  classgnode_1_1Input__coll__graph.md5  classgnode_1_1Logger.tex  classgnode_1_1Node.tex  classgnode_1_1Node__coll__graph.md5  classgnode_1_1Output.tex  classgnode_1_1Output__inherit__graph.md5  classgnode_1_1Port.tex  classgnode_1_1Port__inherit__graph.md5  data_8hpp.tex  data_8hpp_source.tex  dir_407ae6284bb9b4d93f08c2988916fda6.tex  dir_407ae6284bb9b4d93f08c2988916fda6_dep.md5  dir_4ff6d5847fb1519e00c24003e831ecf3.tex  dir_9dc8fdd0c27ff33ecff1c64b4c964ac0.tex  files.tex  gnode_8hpp.tex  gnode_8hpp_source.tex  graph_8hpp.tex  graph_8hpp_source.tex  hierarchy.tex  index.tex  link_8hpp.tex  link_8hpp_source.tex  logger_8hpp.tex  logger_8hpp_source.tex  md_docs_2architecture.tex  namespacegnode.tex  namespaces.tex  node_8hpp.tex  node_8hpp_source.tex  point_8hpp.tex  point_8hpp_source.tex  (+6 more)
scripts/: clang_style  format_src.sh  generate_cmakelists_tests.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_3.js  functions_5.js  (+23 more)
src/: common.cpp  node.cpp  port.cpp  tree.cpp
tests/: CMakeLists.txt
tests/test_base/: CMakeLists.txt  test_base.cpp
tests/test_cyclic/: CMakeLists.txt  test_cyclic.cpp
tests/test_graph/: CMakeLists.txt  test_graph.cpp
tests/test_nodes/: CMakeLists.txt  test_nodes.cpp
tests/test_ports/: CMakeLists.txt  test_ports.cpp
tests/test_tree/: CMakeLists.txt  test_tree.cpp
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/src/: cycle_detection.cpp  deep_propagation.cpp  disconnected_nodes.cpp  incremental_update.cpp  main.cpp  nodes.hpp  random_dag.cpp  simple_chain.cpp  validation.cpp
